Use Dockerfile instead of Docker Maven plugin